--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.1",
+    "@types/sqlite3": "^3.1.11",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
